# distributed-systems

./: README.md
machine-project-1/: .gitignore
machine-project-1/task-1/: .gitignore  Makefile  README.md  WordCount.java  task-1.txt
machine-project-1/task-1/input/: input.txt
machine-project-1/task-1/java/: WordCount.java
machine-project-1/task-2/: .gitignore  README.md  pom.xml  task-2.txt
machine-project-1/task-2/src/main/java/: PurchaseNetwork.java  PurchaseNetworkCounterMapper.java  PurchaseNetworkCounterReducer.java  PurchaseNetworkKey.java  PurchaseNetworkMapper.java  PurchaseNetworkReducer.java
machine-project-1/task-2/src/test/java/: PurchaseNetworkKeyTest.java  PurchaseNetworkMapperTest.java  PurchaseNetworkReducerTest.java  PurchaseNetworkTest.java
machine-project-2/: Cargo.toml  Procfile  README.md
machine-project-2-rust/: Cargo.toml
machine-project-2-rust/src/: config.rs  main.rs  node.rs  node.rs.bk  rpc.rs
machine-project-2/src/: codec.rs  config.rs  main.rs  node.rs  server.rs
