[package]
name = "machine-project-2"
version = "0.1.0"
authors = ["Jordan Crane <jordancrane@me.com",
           "Jonah George <jonah.george@me.com>"]

[dependencies]
rand = "*"
tarpc = "0.6.0"
clap = "*"
ticktock = "0.3.4"
log = "0.3.0"
env_logger = "0.4.2"

[[bin]]
name = "machine-project-2"
path = "src/main.rs"
