[package]
name = "machine-project-2"
version = "0.1.0"
authors = ["Jordan Crane <jordancrane@me.com",
           "Jonah George <jonah.george@me.com>"]

[dependencies]
rand = "*"
tarpc = "0.6.0"
clap = "*"
ticktock = "0.3.4"
log = "0.3.0"
env_logger = "0.4.2"
serde_derive = "0.8.2"
serde_json = "0.8.2"
serde = "0.8.2"
atomic = "0.3"

[[bin]]
name = "machine-project-2"
path = "src/main.rs"
